# spa

./: .coverage  .env  .env.sample  .flake8  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.nginx  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
habits/templates/habits/: habits_create.html  habits_delete.html  habits_list.html  habits_public_list.html  habits_update.html
habits/tests/: conftest.py  test_models.py
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_user_telegram_id_user_telegram_username.py  0004_remove_user_username.py
users/templates/: registration.html
users/templates/users/: login.html
